feat(#51) saving images
